--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -23,46 +23,57 @@ body {
   padding: 25px 30px;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
-}
 
-.container .title {
-  font-size: 25px;
-  font-weight: 500;
-  position: relative;
-}
+  .title {
+    font-size: 25px;
+    font-weight: 500;
+    position: relative;
 
-.container .title::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 3px;
-  width: 30px;
-  border-radius: 5px;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
-}
+    &::before {
 
-.container .title::after {
-  content: "";
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 30px;
-  width: 3px;
-  border-radius: 5px;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
-}
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 3px;
+      width: 30px;
+      border-radius: 5px;
+      background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    }
 
-.content form .user-details {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 20px 0 12px 0;
-}
+    &::after {
+      content: "";
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: 30px;
+      width: 3px;
+      border-radius: 5px;
+      background: linear-gradient(135deg, #71b7e6, #9b59b6);
+    }
+  }
 
-form .user-details .input-box {
-  margin-bottom: 15px;
-  width: calc(100% / 2 - 20px);
+  .content {
+    form {
+      .user-details {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 20px 0 12px 0;
+
+        .input-box {
+          margin-bottom: 15px;
+          width: calc(100% / 2 - 20px);
+
+          span.details {
+            display: inline-block;
+            font-weight: 500;
+            margin-bottom: 5px;
+          }
+        }
+      }
+    }
+  }
 }
 
 form .input-box span.details {
